syntax = "proto3";
service SupplierService {
  rpc findAllPreferredSuppliers (Empty) returns (SupplierList);
  rpc findAllSuppliers (Empty) returns (SupplierList);
  rpc findAllProducts (Empty) returns (ProductList);
  rpc findPreferredSupplier (Product) returns (Supplier);
  rpc setPreferredSupplierForProduct (SetSupplierParams) returns (Empty);
}
message Supplier {
  string id = 1;
  string name = 2;
  string phone = 3;
}
message SupplierList {
  repeated Supplier suppliers = 1;
}
message ProductList {
  repeated Product products = 1;
}
message Product {
    string id = 1;
    string name = 2;
    string supplierFk = 3;
}
message SetSupplierParams {
    Supplier supplier = 1;
    Product product = 2;
}
message Empty {}